--- a/styles/HeroSection.module.css
+++ b/styles/HeroSection.module.css
@@ -6,10 +6,12 @@
 
 .imageContainer {
   z-index: 1;
+  height: 100%;
 }
 
 .imageContainer>img {
   filter: brightness(60%);
+  height: 100%;
 }
 
 .contentContainer {
@@ -32,11 +34,37 @@
   color: rgba(255, 255, 255, 0.809);
 }
 
-.rating i{
+.rating i {
   color: red;
 }
 
 .rating>span {
   font-size: 2em;
   color: white;
+}
+
+
+@media screen and (max-width: 600px) {
+  .contentContainer {
+    bottom: 10px;
+  }
+
+  .slideContainer {
+    height: 25vh;
+  }
+
+  .contentContainer>h3 {
+    font-size: 20px;
+  }
+}
+
+
+@media screen and (min-width: 601px) and (max-width: 1000px) {
+  .slideContainer {
+    height: 40vh;
+  }
+
+  .contentContainer>h3 {
+    font-size: 20px;
+  }
 }
