--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,16 @@
     color: grey !important;
 }
 
+*::-webkit-scrollbar {
+    display: none !important;
+}
+
+* {
+    -ms-overflow-style: none !important;
+    scrollbar-width: none !important;
+}
+
+
 :root {
     --bebas-nueve: 'Bebas Neue', sans-serif;
     --oswald: 'Oswald', sans-serif;
