--- a/styles/MovieContainer.module.css
+++ b/styles/MovieContainer.module.css
@@ -3,8 +3,12 @@
     overflow-x: scroll !important;
 }
 
+.title {
+    font-size: 30px;
+}
+
 .card {
-    width: 300px !important;
+    width: 300px;
     padding: 10px;
     display: inline-flex;
     flex: none;
@@ -24,4 +28,30 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+
+@media screen and (max-width: 600px) {
+    .card {
+        width: 150px;
+    }
+
+    .card .cardImage {
+        height: 200px;
+    }
+
+    .title {
+        font-size: 20px
+    }
+}
+
+
+@media screen and (min-width: 601px) and (max-width: 1000px) {
+    .slideContainer {
+        height: 40vh;
+    }
+
+    .contentContainer>h3 {
+        font-size: 20px;
+    }
 }
