--- a/styles/MovieContainer.module.css
+++ b/styles/MovieContainer.module.css
@@ -8,12 +8,12 @@
 }
 
 .card {
-    width: 300px;
+    width: 300px !important;
     padding: 10px;
     display: inline-flex;
     flex: none;
     width: fit-content;
-    border: 1px solid rgba(0, 0, 0, 0.338);
+    background-color: rgba(128, 128, 128, 0.134);
     border-radius: 15px;
 }
 
@@ -33,7 +33,7 @@
 
 @media screen and (max-width: 600px) {
     .card {
-        width: 150px;
+        width: 150px !important;
     }
 
     .card .cardImage {
