--- a/styles/MovieContainer.module.css
+++ b/styles/MovieContainer.module.css
@@ -9,17 +9,17 @@
 
 .card {
     width: 300px !important;
-    padding: 10px;
+    /* padding: 10px; */
     display: inline-flex;
     flex: none;
     width: fit-content;
     background-color: rgba(128, 128, 128, 0.134);
-    border-radius: 15px;
+    border-radius: 2px;
 }
 
 
 .card .cardImage {
-    height: 400px;
+    height: 420px;
     border-radius: 7px;
     overflow: hidden;
 }
@@ -33,11 +33,12 @@
 
 @media screen and (max-width: 600px) {
     .card {
-        width: 150px !important;
+        width: 120px !important;
     }
 
     .card .cardImage {
         height: 200px;
+        border-radius: 2px;
     }
 
     .title {
