--- a/styles/MovieContainer.module.css
+++ b/styles/MovieContainer.module.css
@@ -7,7 +7,8 @@
     font-size: 30px;
 }
 
-.card {
+.card,
+.scroll_card {
     width: 300px !important;
     /* padding: 10px; */
     display: inline-flex;
@@ -18,13 +19,15 @@
 }
 
 
-.card .cardImage {
+.card .cardImage,
+.scroll_card .cardImage {
     height: 420px;
     border-radius: 7px;
     overflow: hidden;
 }
 
-.card .cardImage img {
+.card .cardImage img,
+.scroll_card .cardImage img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -32,13 +35,23 @@
 
 
 @media screen and (max-width: 600px) {
+
     .card {
-        width: 120px !important;
+        width: 100% !important;
+    }
+
+    .scroll_card {
+        width: 160px !important;
     }
 
     .card .cardImage {
-        height: 200px;
+        height: 250px;
         border-radius: 2px;
+    }
+
+    .scroll_card .cardImage {
+        height: 250px;
+        border-radius: 8px;
     }
 
     .title {
