--- a/styles/Navigation.module.css
+++ b/styles/Navigation.module.css
@@ -1,9 +1,13 @@
 .NavigationBar {
     z-index: 10 !important;
-    position: fixed;
-    top: 0;
     width: 100%;
-    background-color: rgba(230, 228, 228, 0.429);
+    position: sticky;
+    top: 0;
+    background-color: rgba(230, 228, 228, 0.5);
+    /* background-color: rgba(221, 221, 221, 0.929); */
+    /* filter: blur(8px); */
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
 }
 
 .menu {
@@ -12,7 +16,6 @@
 
 @media screen and (max-width: 600px) {
     .NavigationBar {
-        position: static;
         padding: 10px 5px !important;
     }
 }
