--- a/styles/Navigation.module.css
+++ b/styles/Navigation.module.css
@@ -3,10 +3,8 @@
     width: 100%;
     position: sticky;
     top: 0;
-    background-color: rgba(230, 228, 228, 0.5);
-    /* background-color: rgba(221, 221, 221, 0.929); */
-    /* filter: blur(8px); */
-    -webkit-backdrop-filter: blur(8px);
+    position: fixed;
+    background-color: rgba(230, 228, 228, 0.3);
     backdrop-filter: blur(8px);
 }
 
@@ -17,7 +15,9 @@
 @media screen and (max-width: 600px) {
     .NavigationBar {
         padding: 10px 5px !important;
+        position: static;
     }
+
 }
 
 
