--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,8 @@
     --primary-color: white
 }
 
+
+
 .swiper-button-prev,
 .swiper-button-next {
     color: grey !important;
@@ -47,6 +49,9 @@
     background: rgb(220, 51, 51) !important;
 }
 
+.default_screen_padding {
+    padding: 0 100px;
+}
 
 .bebas_nueve {
     font-family: var(--bebas-nueve) !important;
@@ -82,4 +87,11 @@ body {
     border: 1px solid rgba(128, 128, 128, 0.236);
     border-radius: 5px;
     padding: 5px;
+}
+
+
+@media screen and (max-width:600px) {
+    .default_screen_padding {
+        padding: 0 10px;
+    }
 }
