--- a/styles/globals.css
+++ b/styles/globals.css
@@ -128,6 +128,20 @@ body {
     width: 60%
 }
 
+.fadein {
+    animation: opac 0.2s
+}
+
+@keyframes opac {
+    from {
+        opacity: 0
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
 @media screen and (max-width : 600px) {
     .youtubeModal {
         width: 100%
