--- a/styles/HeroSection.module.css
+++ b/styles/HeroSection.module.css
@@ -18,11 +18,23 @@
 
 .contentContainer {
   position: absolute;
-  bottom: 20px;
-  width: 100%;
-  text-align: center;
+  bottom: 0;
+  left: 0;
+  width: 50%;
+  padding: 60px;
   color: white;
   z-index: 20;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+  background: #000000;
+  background: linear-gradient(90deg, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 0.05) 60%);
+
+  background: #000000;
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.31) 50%, rgba(0, 0, 0, 0.1) 100%);
 }
 
 .contentContainer h3 {
@@ -47,18 +59,20 @@
 
 .contentContainer>h3 {
   font-size: 40px;
-  font-family: var(--bebas_nueve) !important;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   margin: 0;
+  font-weight: 600;
 }
+
 
 .rating {
   color: rgba(255, 255, 255, 0.809);
-  font-size: 20px;
+  font-size: 12px;
 }
 
-.rating i {
-  color: red;
+.rating svg {
+  height: 16px;
+  width: 16px;
 }
 
 .rating>span {
